<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_notification"
        android:persistent="true"
        android:summaryOff="@string/pref_summary_notification_off"
        android:summaryOn="@string/pref_summary_notification_on"
        android:title="@string/pref_title_notification" />

    <br.com.caiochagas.views.ListPreferenceWithSummary
        android:defaultValue="@string/pref_default_notification_hour"
        android:dependency="@string/pref_key_notification"
        android:entries="@array/pref_list_titles"
        android:entryValues="@array/pref_list_values"
        android:key="@string/pref_key_notification_time"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_notification_time" />

</PreferenceScreen>