<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.image.ImageActivity">

    <FrameLayout
        android:id="@+id/img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/img_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="@font/opensanscondensed_light"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            tools:text="Vestibulum leo magna, venenatis quis ullamcorper vel, suscipit id lacus." />

    </FrameLayout>

    <Button
        android:id="@+id/btn_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_edit_color"
        android:text="@string/txt_btn_background"
        android:textColor="@color/colorEdit"
        app:layout_constraintBottom_toTopOf="@+id/btn_share"
        app:layout_constraintEnd_toStartOf="@id/btn_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <Button
        android:id="@+id/btn_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_edit_size"
        android:text="@string/txt_btn_size"
        android:textColor="@color/colorEdit"
        app:layout_constraintBottom_toTopOf="@+id/btn_share"
        app:layout_constraintEnd_toStartOf="@id/btn_font"
        app:layout_constraintStart_toEndOf="@+id/btn_color"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <Button
        android:id="@+id/btn_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_edit_font"
        android:text="@string/txt_btn_font"
        android:textColor="@color/colorEdit"
        app:layout_constraintBottom_toTopOf="@+id/btn_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_size"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <Button
        android:id="@+id/btn_share"
        style="@style/Button"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_btn_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>